[package]
name = "kvs"
version = "0.1.0"
authors = ["Chris Wren <chriswrendeveloper@gmail.com>"]
description = "A key-value store"
edition = "2024"

[dependencies]
clap = {version = "4", features = ["derive"]}
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
