[package]
name = "kvs"
version = "0.1.0"
authors = ["Chris Wren <chriswrendeveloper@gmail.com>"]
description = "A key-value store"
edition = "2024"

[dependencies]
clap = {version = "4", features = ["derive"]}
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt", "json"]}
tracing-log = "0.1"
sled = "0.34.6"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.6.5"
once_cell = "1.21.3"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[[bench]]
name = "engine_benchmark"
harness = false

[profile.bench]
debug = true


